--- a/.env.vagrant
+++ b/.env.vagrant
@@ -1,8 +1,12 @@
 VAGRANT=true
-LOCAL_DOMAIN=mastodon.local
+# LOCAL_DOMAIN=mastodon.local
 BIND=0.0.0.0
 DB_HOST=/var/run/postgresql/
 
 ES_ENABLED=true
 ES_HOST=localhost
 ES_PORT=9200
+
+## Zai Customization
+LIMITED_FEDERATION_MODE=true
+LOCAL_DOMAIN=zai.local
